Update main.css errors

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <nav class="unit xs-1 s-1 m-2-3 l-1-3">
       <ul>
         <li><a href="#">Planets</a></li>
-        <li><a href="#"">Moons</li>
-        <li><a href="#">Exploration</li>
+        <li><a href="#"">Moons</a></li>
+        <li><a href="#">Exploration</a></li>
       </ul>
     </nav>
   </header>
