--- a/index.html
+++ b/index.html
@@ -2,24 +2,27 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Modular Nav</title>
+  <title>Modular nav</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header class="grid grid-middle">
     <div class="unit xs-1 s-1 m-1-3 l-1-3">
-      <h1>Solar System</h1>
+      <h1 class="peta">Solar System</h1>
     </div>
     <nav class="unit xs-1 s-1 m-2-3 l-1-3">
       <ul>
         <li><a href="#">Planets</a></li>
-        <li><a href="#"">Moons</a></li>
+        <li><a href="#">Moons</a></li>
         <li><a href="#">Exploration</a></li>
       </ul>
+
     </nav>
+
   </header>
+
 </body>
 </html>
